--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
-    "start": "gulp",
-    "html": "gulp html"
+    "styles": "gulp styles",
+    "html": "gulp html",
+    "build": "gulp build",
+    "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
